--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,35 @@
-# Database
-DATABASE_URL=postgresql://ztag:ztag123@postgres:5432/ztag_db
-PGHOST=postgres
-PGPORT=5432
-PGDATABASE=ztag_db
-PGUSER=ztag
-PGPASSWORD=ztag123
+# Environment variables for ZTAG platform
+# These values are used by Docker Compose and individual services during local development.
 
-# Redis
-REDIS_URL=redis://redis:6379
+# --- General Configuration ---
+LOG_LEVEL=debug # info, debug, warn, error
+JWT_SECRET="super-secret-jwt-key-change-in-production,another-jwt-secret-for-rotation"
 
-# JWT
-JWT_SECRET=super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=24h
+# --- Database (PostgreSQL) ---
+DATABASE_URL="postgresql://ztag_user:ztag_password@postgres:5432/ztag_db"
+POSTGRES_USER=ztag_user
+POSTGRES_PASSWORD=ztag_password
+POSTGRES_DB=ztag_db
 
-# Gateway
+# --- Redis ---
+REDIS_URL="redis://redis:6379"
+
+# --- ZTAG Gateway Service ---
 GATEWAY_PORT=3001
-GATEWAY_HOST=0.0.0.0
+# URLs for downstream services the Gateway proxies to. Use service names for Docker Compose, localhost for pnpm dev.
+POLICY_ENGINE_URL="http://policy-engine:4000" # For Docker: http://policy-engine:4000, For pnpm dev: http://localhost:4000
+ECHO_SERVICE_URL="http://echo-service:7070"   # For Docker: http://echo-service:7070, For pnpm dev: http://localhost:7070
 
-# Policy Engine
-POLICY_ENGINE_PORT=3002
-POLICY_ENGINE_HOST=0.0.0.0
+# --- ZTAG Policy Engine Service ---
+POLICY_ENGINE_PORT=4000
 
-# Control Plane
+# --- ZTAG Control Plane UI ---
 CONTROL_PLANE_PORT=3000
-CONTROL_PLANE_HOST=0.0.0.0
+# Publicly accessible URL for the Policy Engine, used by the Control Plane's frontend code.
+NEXT_PUBLIC_POLICY_ENGINE_URL="http://localhost:4000"
 
-# Echo Service
+# --- ZTAG Echo Service ---
 ECHO_SERVICE_PORT=7070
-ECHO_SERVICE_HOST=0.0.0.0
 
-# Environment
-NODE_ENV=development
+# --- Node.js Environment ---
+NODE_ENV=development # development, production
