--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,93 +1,77 @@
-name: CI
+name: CI Workflow
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  lint-and-test:
+  build:
+    name: Build All
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'pnpm'
 
-    - name: Install pnpm
-      run: npm install -g pnpm
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
 
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      - name: Build All Services
+        run: pnpm build
 
-    - name: Lint code
-      run: pnpm lint
+      - name: Build Docker Images
+        run: |
+          docker build -t ztag-policy-engine -f infra/docker/policy-engine.Dockerfile .
+          docker build -t ztag-gateway -f infra/docker/gateway.Dockerfile .
+          docker build -t ztag-control-plane -f infra/docker/control-plane.Dockerfile .
+          docker build -t ztag-echo-service -f infra/docker/echo-service.Dockerfile .
 
-    - name: Type check
-      run: pnpm -r type-check
-
-    - name: Build packages
-      run: pnpm build
-
-    - name: Run tests
-      run: pnpm test
-
-  docker-build:
+  lint:
+    name: Lint All
     runs-on: ubuntu-latest
-    needs: lint-and-test
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'pnpm'
 
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: false
-        tags: ztag-platform:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
 
-  integration-test:
+      - name: Run Lint
+        run: pnpm lint
+
+  test:
+    name: Test All
     runs-on: ubuntu-latest
-    needs: docker-build
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Install pnpm
-      run: npm install -g pnpm
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'pnpm'
 
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
 
-    - name: Start services
-      run: docker compose up -d
-
-    - name: Wait for services
-      run: |
-        sleep 30
-        curl -f http://localhost:3001/health || exit 1
-        curl -f http://localhost:3002/health || exit 1
-        curl -f http://localhost:7070/health || exit 1
-
-    - name: Run integration tests
-      run: pnpm test:integration
-
-    - name: Stop services
-      run: docker compose down
+      - name: Run Tests
+        run: pnpm test
