--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@ztag/shared": "workspace:*",
     "fastify": "^4.20.0",
-    "fastify-cors": "^8.4.0",
-    "fastify-helmet": "^7.1.0",
-    "fastify-sensible": "^5.6.0",
+    "@fastify/cors": "^8.4.0",
+    "@fastify/helmet": "^11.1.0",
+    "@fastify/sensible": "^5.6.0",
+    "@fastify/swagger": "^8.9.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "fastify-raw-body": "^4.2.0",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
@@ -27,7 +29,8 @@
     "uuid": "^9.0.0",
     "jsonwebtoken": "^9.0.0",
     "zod": "^3.22.0",
-    "undici": "^6.0.0"
+    "undici": "^6.0.0",
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -37,6 +40,7 @@
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.0.0",
+    "@types/prom-client": "^14.0.2"
   }
 }
