--- a/apps/policy-engine/package.json
+++ b/apps/policy-engine/package.json
@@ -12,29 +12,25 @@
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
     "clean": "rm -rf dist",
-    "db:migrate": "node dist/database/migrate.js",
-    "db:seed": "node dist/database/seed.js"
+    "db:migrate": "psql $DATABASE_URL -f src/database/migrations/001_initial.sql",
+    "db:seed": "psql $DATABASE_URL -f src/database/migrations/001_initial.sql"
   },
   "dependencies": {
     "@ztag/shared": "workspace:*",
+    "@fastify/cors": "^8.4.0",
+    "@fastify/swagger": "^8.9.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "fastify": "^4.20.0",
-    "fastify-cors": "^8.4.0",
-    "fastify-helmet": "^7.1.0",
-    "fastify-sensible": "^5.6.0",
-    "fastify-raw-body": "^4.2.0",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
     "pg": "^8.11.0",
-    "redis": "^4.6.0",
     "uuid": "^9.0.0",
-    "jsonwebtoken": "^9.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/pg": "^8.10.0",
     "@types/uuid": "^9.0.0",
-    "@types/jsonwebtoken": "^9.0.0",
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
