--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     container_name: ztag-postgres
     environment:
       POSTGRES_DB: ztag_db
-      POSTGRES_USER: ztag
-      POSTGRES_PASSWORD: ztag123
+      POSTGRES_USER: ztag_user # Updated user
+      POSTGRES_PASSWORD: ztag_password # Updated password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ztag"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD-SHELL", "pg_isready -U ztag_user -d ztag_db"] # Updated user
+      interval: 5s # Shorter interval for faster startup
+      timeout: 5s
       retries: 5
 
   redis:
@@ -27,44 +27,53 @@ services:
       - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
+      interval: 5s # Shorter interval for faster startup
+      timeout: 5s
       retries: 5
 
   policy-engine:
     build:
       context: .
       dockerfile: infra/docker/policy-engine.Dockerfile
+      target: development # Use development target for faster local builds
     container_name: ztag-policy-engine
     environment:
-      - DATABASE_URL=postgresql://ztag:ztag123@postgres:5432/ztag_db
-      - REDIS_URL=redis://redis:6379
+      - DATABASE_URL=postgresql://ztag_user:ztag_password@postgres:5432/ztag_db
       - JWT_SECRET=super-secret-jwt-key-change-in-production
-      - POLICY_ENGINE_PORT=3002
+      - POLICY_ENGINE_PORT=4000 # Updated port
+      - LOG_LEVEL=debug # Changed to debug for dev environment
       - NODE_ENV=development
     ports:
-      - "3002:3002"
+      - "4000:4000" # Updated port
     depends_on:
       postgres:
         condition: service_healthy
-      redis:
-        condition: service_healthy
     volumes:
-      - ./apps/policy-engine:/app
-      - /app/node_modules
+      - ./apps/policy-engine:/app/apps/policy-engine
+      - ./packages/shared:/app/packages/shared
+      - /app/apps/policy-engine/node_modules # Anonymous volume
+    command: pnpm dev # Start in development mode with watch
+    # Healthcheck for policy-engine (optional, can be added after initial setup)
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   gateway:
     build:
       context: .
       dockerfile: infra/docker/gateway.Dockerfile
+      target: development # Use development target
     container_name: ztag-gateway
     environment:
-      - DATABASE_URL=postgresql://ztag:ztag123@postgres:5432/ztag_db
+      - DATABASE_URL=postgresql://ztag_user:ztag_password@postgres:5432/ztag_db
       - REDIS_URL=redis://redis:6379
-      - JWT_SECRET=super-secret-jwt-key-change-in-production
+      - JWT_SECRET=super-secret-jwt-key-change-in-production,another-secret # Comma-separated
       - GATEWAY_PORT=3001
-      - POLICY_ENGINE_URL=http://policy-engine:3002
+      - POLICY_ENGINE_URL=http://policy-engine:4000 # Updated port
       - ECHO_SERVICE_URL=http://echo-service:7070
+      - LOG_LEVEL=debug # Changed to debug for dev environment
       - NODE_ENV=development
     ports:
       - "3001:3001"
@@ -74,46 +83,67 @@ services:
       redis:
         condition: service_healthy
       policy-engine:
-        condition: service_started
+        condition: service_healthy # Wait for policy-engine to be healthy
     volumes:
-      - ./apps/gateway:/app
-      - /app/node_modules
+      - ./apps/gateway:/app/apps/gateway
+      - ./packages/shared:/app/packages/shared
+      - /app/apps/gateway/node_modules # Anonymous volume
+    command: pnpm dev # Start in development mode with watch
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   control-plane:
     build:
       context: .
       dockerfile: infra/docker/control-plane.Dockerfile
+      target: development # Use development target
     container_name: ztag-control-plane
     environment:
-      - DATABASE_URL=postgresql://ztag:ztag123@postgres:5432/ztag_db
-      - POLICY_ENGINE_URL=http://policy-engine:3002
-      - JWT_SECRET=super-secret-jwt-key-change-in-production
+      - NEXT_PUBLIC_POLICY_ENGINE_URL=http://localhost:4000 # Publicly accessible URL for browser
       - CONTROL_PLANE_PORT=3000
       - NODE_ENV=development
     ports:
       - "3000:3000"
     depends_on:
-      postgres:
-        condition: service_healthy
       policy-engine:
-        condition: service_started
+        condition: service_healthy # Wait for policy-engine to be healthy
     volumes:
-      - ./apps/control-plane:/app
-      - /app/node_modules
+      - ./apps/control-plane:/app/apps/control-plane
+      - ./packages/shared:/app/packages/shared
+      - /app/apps/control-plane/node_modules # Anonymous volume
+    command: pnpm dev
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"] # Check if UI is reachable
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    tty: true # Keep container running for dev server
 
   echo-service:
     build:
       context: .
       dockerfile: infra/docker/echo-service.Dockerfile
+      target: development # Use development target
     container_name: ztag-echo-service
     environment:
       - ECHO_SERVICE_PORT=7070
+      - LOG_LEVEL=debug # Changed to debug for dev environment
       - NODE_ENV=development
     ports:
       - "7070:7070"
     volumes:
-      - ./apps/echo-service:/app
-      - /app/node_modules
+      - ./apps/echo-service:/app/apps/echo-service
+      - ./packages/shared:/app/packages/shared
+      - /app/apps/echo-service/node_modules # Anonymous volume
+    command: pnpm dev # Start in development mode with watch
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7070/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
