--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "turbo": "^1.10.0"
+    "turbo": "^1.10.0",
+    "jsonwebtoken": "^9.0.0",
+    "dotenv": "^16.4.5",
+    "@types/jsonwebtoken": "^9.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
